--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ install:
 script:
   - perl -pe 's/<!-- ga_injection_point -->/`cat ga_snippet.html`/e' index.html > index_with_ga.html
   - mv index_with_ga.html index.html && rm ga_snippet.html
-  - aws s3 sync . s3://mitasateet.heap.fi/ --region eu-west-1 --exclude "*" --include "*.html" --include "assets/*"
+  - aws s3 sync . s3://mitasateet.heap.fi/ --region eu-west-1 --exclude "*" --include "*.html" --include "assets/*" --delete
